United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6906565 G1: deal with compilation warning in g1MemoryPool.hpp
6906565 : G1: deal with compilation warning in g1MemoryPool.hpp

Details
Type:
Bug
Submit Date:
2009-12-02
Status:
Resolved
Updated Date:
2010-04-04
Project Name:
JDK
Resolved Date:
2010-01-14
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
The fix for 6815790 introduced three compilation warnings:

"/java/east/u2/ap31282/hotspot-g1-mm/src/share/vm/services/g1MemoryPool.hpp", line 201: Warning: G1EdenPool::max_size hides the virtual function MemoryPool::max_size() const.
"/java/east/u2/ap31282/hotspot-g1-mm/src/share/vm/services/g1MemoryPool.hpp", line 215: Warning: G1SurvivorPool::max_size hides the virtual function MemoryPool::max_size() const.
"/java/east/u2/ap31282/hotspot-g1-mm/src/share/vm/services/g1MemoryPool.hpp", line 229: Warning: G1OldGenPool::max_size hides the virtual function MemoryPool::max_size() const.
3 Warning(s) detected.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/afc30fccf324
                                     
2009-12-04
EVALUATION

See Suggested Fix.
                                     
2009-12-02
SUGGESTED FIX

Change size_t max_size() to size_t max_size() const.
                                     
2009-12-02



Hardware and Software, Engineered to Work Together