6906565: G1: deal with compilation warning in g1MemoryPool.hpp

Size_t max_size() hides size_t max_size() const.

Reviewed-by: jmasa, ysr